Spring rest sustainable example